--- a/ewm-stats/service/src/main/resources/application.yaml
+++ b/ewm-stats/service/src/main/resources/application.yaml
@@ -1,6 +1,18 @@
 spring:
+  mvc:
+    format:
+      date: "yyyy-MM-dd"
+      date-time: "yyyy-MM-dd HH:mm:ss"
+      time: "HH:mm:ss"
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:ewm-stats
     username: test
     password: test
+
+server:
+  port: 8080
+
+logging:
+  level:
+    web: debug
