--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,17 @@ services:
   stats-server:
     ports:
       - "9090:9090"
+    environment:
+      POSTGRES_USER: "kitty"
+      POSTGRES_PASSWORD: "kitty"
+      POSTGRES_DATASOURCE_URL: "jdbc:postgres://localhost:5432/ewm_stats"
 
   stats-db:
     image: postgres:14-alpine
+    environment:
+      POSTGRES_DB: "ewm_stats"
+      POSTGRES_USER: "kitty"
+      POSTGRES_PASSWORD: "kitty"
 
   ewm-service:
     ports:
