--- a/ewm-stats/service/src/main/resources/application.yaml
+++ b/ewm-stats/service/src/main/resources/application.yaml
@@ -4,15 +4,37 @@ spring:
       date: "yyyy-MM-dd"
       date-time: "yyyy-MM-dd HH:mm:ss"
       time: "HH:mm:ss"
+
+server:
+  port: 9090
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: default
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+    url: ${POSTGRES_DATASOURCE_URL}
+
+---
+
+spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:ewm-stats
     username: test
     password: test
-
-server:
-  port: 8080
+  config:
+    activate:
+      on-profile:
+        - ci
+        - test
 
 logging:
   level:
     web: debug
+
